--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,12 +28,8 @@ jobs:
     - uses: actions/checkout@v2
     - run: git fetch --no-tags --prune --depth=1 origin +refs/heads/master:refs/remotes/origin/master
     - uses: ./
-    - name: echo env var previously set
-      if: always()
-      run: |
-        echo "::echo::on"
-        echo '$DIFF_DETECTED=${{ env.DIFF_DETECTED }}'
-    - name: Run if diff detected
+      with:
+        config_file: .github/rules.yml
+    - name: Only run if a diff has been detected
       if: env.DIFF_DETECTED
-      run: |
-        echo diff detected
+      run: echo diff detected
