--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,8 @@ on:
     - reopened
     - ready_for_review
   push:
+    branches:
+    - '!master'
 
 jobs:
   # test npm scripts
@@ -51,7 +53,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./
       with:
-        config_file: .github/rules2.yml
+        config_file: __tests__/rules-match-all.yml
     - name: Ensure a change has been detected
       run: |
         [ "${DIFF_DETECTED}" == 'true' ] || exit 1
@@ -62,7 +64,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./
       with:
-        config_file: .github/rules3.yml
+        config_file: __tests__/rules-no-diff-detected.yml
     - name: Ensure a change has been detected
       run: |
         [ "${DIFF_DETECTED}" == 'false' ] || exit 1
