--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "conditional-diffing-action",
+  "name": "path-filtering-action",
   "version": "0.0.0",
   "private": true,
-  "description": "Filter paths based on diffing rules",
+  "description": "Filter paths based on git diff rules",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lostick/conditional-diffing-action.git"
+    "url": "git+https://github.com/lostick/path-filtering-action.git"
   },
   "keywords": [
     "actions",
@@ -26,24 +26,24 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.0",
-    "@types/js-yaml": "^3.12.3",
-    "@types/yaml": "^1.2.0",
-    "simple-git": "^1.132.0"
+    "simple-git": "^2.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^25.2.1",
+    "@types/js-yaml": "^3.12.3",
     "@types/node": "^12.7.12",
-    "@typescript-eslint/parser": "^2.8.0",
-    "@zeit/ncc": "^0.20.5",
-    "eslint": "^5.16.0",
-    "eslint-plugin-github": "^2.0.0",
-    "eslint-plugin-jest": "^22.21.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^24.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "@zeit/ncc": "^0.22.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-github": "^3.4.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "jest": "^25.5.4",
+    "jest-circus": "^25.5.4",
     "js-yaml": "^3.13.1",
-    "prettier": "^1.19.1",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.6.4"
+    "prettier": "^2.0.5",
+    "ts-jest": "^25.4.0",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.8.3"
   }
 }
