--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,7 +26,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ./
-    - run: ls -hal .
     - name: Ensure a change has been detected
       run: |
         [ "${DIFF_DETECTED}" == 'true' ] || exit 1
@@ -57,6 +56,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
     - uses: ./
       with:
         config_file: __tests__/rules-no-diff-detected.yml
