--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,7 +24,7 @@ jobs:
   test-default-branch:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.2.0
     - uses: ./
     - run: ls -hal .
     - name: Ensure a change has been detected
@@ -34,7 +34,7 @@ jobs:
   test-non-default-branch:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.2.0
     - uses: ./
       with:
         base_ref: add-base-ref-input-base-test
@@ -46,6 +46,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - uses: ./
       with:
         config_file: __tests__/rules-match-all.yml
@@ -57,6 +59,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - uses: ./
       with:
         config_file: __tests__/rules-no-diff-detected.yml
