--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
     - run: |
         npm install
         npm run all
@@ -25,8 +27,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
     - uses: ./
-    - run: ls -hal .
     - name: Ensure a change has been detected
       run: |
         [ "${DIFF_DETECTED}" == 'true' ] || exit 1
@@ -35,6 +38,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
     - uses: ./
       with:
         base_ref: add-base-ref-input-base-test
@@ -46,6 +51,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
     - uses: ./
       with:
         config_file: __tests__/rules-match-all.yml
@@ -57,6 +64,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
     - uses: ./
       with:
         config_file: __tests__/rules-no-diff-detected.yml
